优化查询列表可选参数
